# slowjs

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  README_zh.md
cmake/: googletest.cmake  qjs_quickjs.cmake  qjs_tests.cmake  quickjs.cmake
include/: js_engine.h  js_module.h  js_plugin.h  js_types.h
include/slowjs/: JSEngine.hpp  Module.hpp  Plugin.hpp  Types.hpp
src/: JSEngine.cpp  js_engine.cc
tests/: js_engine_test.cc
